--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -5,18 +5,15 @@
     --acid-green: #b9d943;
     --beige: #e7e0d8;
 }
-
 * {
     margin: 0;
     padding: 0;
     font-family: Helvetica, Arial, sans-serif;
 }
-
 body {
     background-color: var(--dark-blue);
 
 }
-
 h1 {
     color: var(--light-blue);
 
@@ -45,11 +42,21 @@ h1 {
     box-shadow: 2px 2px 10px 2px var(--acid-green);
     outline:none;
 }
+.rick-icon{
+    background-color: var(--light-blue);
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+}
 .search__icon {
     width: 50px;
     position: relative;
     top: 10px;
     left: 10px;
+    transition: 0.7s ease-in-out;
+}
+.search__icon:hover{
+    transform: rotate(360deg);
 }
 label {
     position: relative;
@@ -72,7 +79,7 @@ input {
 input:focus{
     border: none;
 }
-button {
+#submit {
     position: relative;
     left: 30px;
     top: -5px;
@@ -81,14 +88,12 @@ button {
     cursor: pointer;
     font-size: 2rem;
 }
-
 main {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 1rem;
     margin: 30px;
 }
-
 article {
     background: var(--acid-green);
     background: linear-gradient(176deg, var(--acid-green) 0%, var(--accent-blue) 49%, var(--dark-blue) 91%);
@@ -104,12 +109,10 @@ article {
     border-radius: 30px;
     border: 5px solid var(--acid-green);
 }
-
 .info__container{
     border-radius: 30px;
     color: var(--beige);
 }
-
 footer {
     padding: 30px;
     background: var(--acid-green);
@@ -117,7 +120,6 @@ footer {
     text-align: center;
     height: 150px;
 }
-
 footer p {
     color: var(--beige);
     padding: 20px;
@@ -129,12 +131,30 @@ footer p {
     font-size: 3.5rem;
     color:var(--acid-green);
 }
-
-
 a:visited{
     color:var(--acid-green);
 }
+.pages{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-content: center;
+    gap: 50px;
+}
+#pages__link__previous,
+#pages__link__next{
+    font-size: 5rem;
+    height: 100px;
+    width: 100px;
+    border-radius: 30px;
+    color: var(--light-blue);
+    text-decoration: none;
+}
+#pages__link__previous:visited,
+#pages__link__next:visited {
+    color: var(--light-blue);
+}
 
-.hide {
-    display: none;
+.hide{
+    visibility: hidden;
 }
